--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,12 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: var(--font-siliguri);
+  /* font-weight: 600; */
+  
+}
+.Toastify__toast-body{
+  font-family: var(--font-siliguri);
+  font-weight: 600;
+  font-size: 13px;
 }
